# xmlrpc-c

./: CMakeLists.txt  configure.in  transport_config.h.cmake  version.h.cmake  version.mk  xmlrpc-c-config  xmlrpc-c-config.in  xmlrpc-c-config.test.in  xmlrpc_config.h.cmake
cmake/: try-attr.cc
examples/: CMakeLists.txt  config.h  json.c  parse_xml.c
examples/cpp/: CMakeLists.txt  xmlrpc_inetd_server.cpp
include/: CMakeLists.txt
include/xmlrpc-c/: CMakeLists.txt  base.h  base.hpp  config.h.cmake  registry.hpp  util.h
lib/: CMakeLists.txt
lib/abyss/: CMakeLists.txt
lib/abyss/src/: CMakeLists.txt  main.c  response.c  server.c  socket_unix.c  xmlrpc_abyss.pc.cmake
lib/curl_transport/: CMakeLists.txt  curlmulti.c  curltransaction.c  xmlrpc_curl_transport.c
lib/expat/: CMakeLists.txt
lib/expat/gennmtab/: CMakeLists.txt
lib/expat/xmlparse/: CMakeLists.txt  xmlrpc_xmlparse.pc.cmake
lib/expat/xmltok/: CMakeLists.txt  xmlrpc_xmltok.pc.cmake
lib/libutil/: CMakeLists.txt  asprintf.c  casprintf.c  error.c  memblock.c  string_number.c  utf8.c  xmlrpc_util.pc.cmake
lib/libwww_transport/: CMakeLists.txt
lib/util/: CMakeLists.txt  casprintf.c
lib/wininet_transport/: CMakeLists.txt
src/: CMakeLists.txt  parse_datetime.c  xmlrpc.pc.cmake  xmlrpc_client.pc.cmake  xmlrpc_data.c  xmlrpc_datetime.c  xmlrpc_decompose.c  xmlrpc_libxml2.c  xmlrpc_parse.c  xmlrpc_server.pc.cmake  xmlrpc_server_abyss.c  xmlrpc_server_abyss.pc.cmake  xmlrpc_server_cgi.c  xmlrpc_server_cgi.pc.cmake  xmlrpc_server_w32httpsys.c  xmlrpc_string.c  xmlrpc_utf8.c
src/cpp/: CMakeLists.txt  libwww.cpp  packetsocket.cpp  param_list.cpp  server_cgi.cpp  xmlrpc++.pc.cmake  xmlrpc_client++.pc.cmake  xmlrpc_cpp.pc.cmake  xmlrpc_packetsocket.pc.cmake  xmlrpc_server++.pc.cmake  xmlrpc_server_abyss++.pc.cmake  xmlrpc_server_cgi++.pc.cmake  xmlrpc_server_pstream++.pc.cmake
src/cpp/test/: CMakeLists.txt
src/test/: CMakeLists.txt  method_registry.c
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt
tools/: CMakeLists.txt
tools/xml/: CMakeLists.txt
tools/xml-rpc-api2cpp/: CMakeLists.txt  Makefile
tools/xml-rpc-api2txt/: CMakeLists.txt
tools/xmlrpc/: CMakeLists.txt  dumpvalue.c  xmlrpc.c
tools/xmlrpc_cpp_proxy/: CMakeLists.txt
tools/xmlrpc_pstream/: CMakeLists.txt  xmlrpc_pstream.cpp
tools/xmlrpc_transport/: CMakeLists.txt  config.h
